// fix #42